[package]
name = "hello-world"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.3",default-features = false, features = [
 "bevy_asset",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "png",
  "webgl2"] }
rand = "0.9.2"


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
panic="abort"

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
panic="abort"

